Внес поправки в HomeWork3

--- a/HomeWork3/index.html
+++ b/HomeWork3/index.html
@@ -34,7 +34,7 @@
                     seo ranking. Globally incubate standards.</p>
                 <div class="top-content-btn">
                     <button class="top-btn-start">Start Now</button>
-                    <button class="top-btn-watch">Watch Video</button>
+                    <a class="top-link-watch" href="#">Watch Video</a>
                 </div>
             </div>
             <div class="top-content-img">
