Внес поправки в HomeWork5

--- a/HomeWork5/index.html
+++ b/HomeWork5/index.html
@@ -98,7 +98,7 @@
                         <h3 class="content-subtitle_3">Grow Your Business</h3>
                         <p class="content-paragraph">Leverage agile frameworks to provide a robust synopsis for high
                             level overviews.</p>
-                        <a href="#">Read More...</a>
+                        <button class="content-item-btn">Read More...</button>
                     </div>
                 </li>
                 <li class="list-content-item">
@@ -107,7 +107,7 @@
                         <h3 class="content-subtitle_3">Get Quality Ieads</h3>
                         <p class="content-paragraph">Leverage agile frameworks to provide a robust synopsis for high
                             level overviews.</p>
-                        <a href="#">Read More...</a>
+                        <button class="content-item-btn">Read More...</button>
                     </div>
                 </li>
                 <li class="list-content-item">
@@ -116,7 +116,7 @@
                         <h3 class="content-subtitle_3">Drive More Sales</h3>
                         <p class="content-paragraph">Leverage agile frameworks to provide a robust synopsis for high
                             level overviews.</p>
-                        <a href="#">Read More...</a>
+                        <button class="content-item-btn">Read More...</button>
                     </div>
                 </li>
             </ul>
