Добавил исправленея  HomeWork9

--- a/HomeWork9/index.html
+++ b/HomeWork9/index.html
@@ -34,88 +34,83 @@
             <div class="page-header-wrp-btn">
                 <nav>
                     <label class="menu-btn" for="menu-switch">
-                        <span>
-                            <svg width="32" height="23" fill="#FFF" viewBox="0 0 32 23"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <path d="M0 23V20.31H32V23H0ZM0 12.76V10.07H32V12.76H0ZM0 2.69V0H32V2.69H0Z" />
-                            </svg>
-                        </span>
+                        <span></span>
                     </label>
-                    <!-- <input id="menu-switch" type="checkbox"> -->
-                    <!-- <ul class="header-menu-list">
-                            <li class="header-menu-list-item">
-                                <a href="#" class="header-menu-list-close-btn"></a>
-                            </li>
-                            <li class="header-menu-list-item">
-                                <span class="menu-list-title">menu</span>
-                            </li>
-                            <li class="header-menu-list-item">
-                                <a href="#">man</a>
-                            </li>
-                            <li class="header-menu-list-item">
-                                <ul class="header-menu-sublist">
-                                    <li class="header-menu-sublist-item">
-                                        <a href="#">Accessories</a>
-                                    </li>
-                                    <li class="header-menu-sublist-item">
-                                        <a href="#">Bags</a>
-                                    </li>
-                                    <li class="header-menu-sublist-item">
-                                        <a href="#">Denim</a>
-                                    </li>
-                                    <li class="header-menu-sublist-item">
-                                        <a href="#">T-Shirts</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li class="header-menu-list-item">
-                                <a href="#">woman</a>
-                            </li>
-                            <li class="header-menu-list-item">
-                                <ul class="header-menu-sublist">
-                                    <li class="header-menu-sublist-item">
-                                        <a href="#">Accessories</a>
-                                    </li>
-                                    <li class="header-menu-sublist-item">
-                                        <a href="#">Jackets &amp;&nbsp;Coats</a>
-                                    </li>
-                                    <li class="header-menu-sublist-item">
-                                        <a href="#">Polos</a>
-                                    </li>
-                                    <li class="header-menu-sublist-item">
-                                        <a href="#">T-Shirts</a>
-                                    </li>
-                                    <li class="header-menu-sublist-item">
-                                        <a href="#">Shirts</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li class="header-menu-list-item">
-                                <a href="#">kids</a>
-                            </li>
-                            <li class="header-menu-list-item">
-                                <ul class="header-menu-sublist">
-                                    <li class="header-menu-sublist-item">
-                                        <a href="#">Accessories</a>
-                                    </li>
-                                    <li class="header-menu-sublist-item">
-                                        <a href="#">Jackets &amp;&nbsp;Coats</a>
-                                    </li>
-                                    <li class="header-menu-sublist-item">
-                                        <a href="#">Polos</a>
-                                    </li>
-                                    <li class="header-menu-sublist-item">
-                                        <a href="#">T-Shirts</a>
-                                    </li>
-                                    <li class="header-menu-sublist-item">
-                                        <a href="#">Shirts</a>
-                                    </li>
-                                    <li class="header-menu-sublist-item">
-                                        <a href="#">Bags</a>
-                                    </li>
-                                </ul>
-                            </li>
-                        </ul> -->
+                    <input id="menu-switch" type="checkbox">
+                    <ul class="header-menu-list">
+                        <li class="header-menu-list-item">
+                            <a href="#" class="header-menu-list-close-btn"></a>
+                        </li>
+                        <li class="header-menu-list-item">
+                            <span class="menu-list-title">menu</span>
+                        </li>
+                        <li class="header-menu-list-item">
+                            <a href="#">man</a>
+                        </li>
+                        <li class="header-menu-list-item">
+                            <ul class="header-menu-sublist">
+                                <li class="header-menu-sublist-item">
+                                    <a href="#">Accessories</a>
+                                </li>
+                                <li class="header-menu-sublist-item">
+                                    <a href="#">Bags</a>
+                                </li>
+                                <li class="header-menu-sublist-item">
+                                    <a href="#">Denim</a>
+                                </li>
+                                <li class="header-menu-sublist-item">
+                                    <a href="#">T-Shirts</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="header-menu-list-item">
+                            <a href="#">woman</a>
+                        </li>
+                        <li class="header-menu-list-item">
+                            <ul class="header-menu-sublist">
+                                <li class="header-menu-sublist-item">
+                                    <a href="#">Accessories</a>
+                                </li>
+                                <li class="header-menu-sublist-item">
+                                    <a href="#">Jackets &amp;&nbsp;Coats</a>
+                                </li>
+                                <li class="header-menu-sublist-item">
+                                    <a href="#">Polos</a>
+                                </li>
+                                <li class="header-menu-sublist-item">
+                                    <a href="#">T-Shirts</a>
+                                </li>
+                                <li class="header-menu-sublist-item">
+                                    <a href="#">Shirts</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="header-menu-list-item">
+                            <a href="#">kids</a>
+                        </li>
+                        <li class="header-menu-list-item">
+                            <ul class="header-menu-sublist">
+                                <li class="header-menu-sublist-item">
+                                    <a href="#">Accessories</a>
+                                </li>
+                                <li class="header-menu-sublist-item">
+                                    <a href="#">Jackets &amp;&nbsp;Coats</a>
+                                </li>
+                                <li class="header-menu-sublist-item">
+                                    <a href="#">Polos</a>
+                                </li>
+                                <li class="header-menu-sublist-item">
+                                    <a href="#">T-Shirts</a>
+                                </li>
+                                <li class="header-menu-sublist-item">
+                                    <a href="#">Shirts</a>
+                                </li>
+                                <li class="header-menu-sublist-item">
+                                    <a href="#">Bags</a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
                 </nav>
                 <a class="header-account-btn" href="#">
                     <svg width="29" height="29" fill="#FFF" viewBox="0 0 29 29" xmlns="http://www.w3.org/2000/svg">
